<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="download_failed">Download Failed</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_desc">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_desc">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_desc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="open_detail">Open Detail</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_image">Download Image</string>
    <string name="download_notification_channel_desc">Any notification related to download file</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="test_100mb_file">Test 100Mb File</string>
</resources>
