<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <com.udacity.button.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textColor="@color/white"
            app:textSize="@dimen/default_text_size" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/radio_100mb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_100mb_file" />

            <RadioButton
                android:id="@+id/radio_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glide_desc" />

            <RadioButton
                android:id="@+id/radio_current_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_app_desc" />

            <RadioButton
                android:id="@+id/radio_retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_desc" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/download_image"
            android:src="@drawable/ic_baseline_cloud_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>